<resources>
    <string name="app_name">D2</string>
    <string name="type">type</string>
    <string name="desc">desc</string>
    <string name="tags">tags</string>
    <string name="name">Name</string>
    <string name="people">people</string>
    <string name="done">DONE</string>
    <string name="date">date</string>
    <string name="delete">DELETE</string>
    <string name="insPageNum">Insert page number</string>
    <string name="search_title">Search</string>
    <string name="addItem">New</string>
    <string name="title_activity_o_note_detail">ONoteDetailActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>