<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="bullet"
            type="me.samen.d2.data.entities.Bullet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        tools:context=".view.bullet.EditBulletActivity">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_desc_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/desc">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bullet.desc}"
                android:id="@+id/edit_desc" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_date_container"
            app:layout_constraintTop_toBottomOf="@id/edit_desc_container"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{bullet.ts}"
                android:id="@+id/edit_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_type_container"
            app:layout_constraintTop_toBottomOf="@id/edit_date_container"
            android:hint="@string/type"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:layout_constraintStart_toStartOf="parent">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_type"
                bind:bullet_type="@{bullet}" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@id/edit_type_container"
            app:layout_constraintTop_toBottomOf="@id/edit_type_container"
            android:id="@+id/btnCopyToClipboard"
            android:text="Copy to clipboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            bind:copyToClipboard="@{editDesc}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>